--- a/package.json
+++ b/package.json
@@ -18,17 +18,9 @@
     "fs-jetpack": "^1.0.0",
     "remote": "^0.2.6",
     "path": "^0.12.7"
-
   },
   "devDependencies": {
-    "chai": "^4.1.0",
-    "css-loader": "^0.28.7",
     "electron": "3.0.6",
-    "electron-packager": "^12.2.0",
-    "electron-is-dev": "^0.3.0",
-    "electron-mocha": "^5.0.0",
-    "mocha": "^4.0.1",
-    "spectron": "^3.8.0",
-    "style-loader": "^0.19.0"
+    "electron-packager": "^12.2.0"
   }
 }
