--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
   "name": "nites-viewer",
   "productName": "NITES-Next Viewer",
-  "description": "Example viewer demo",
-  "version": "2.0.1",
-  "productVersion": "2.0.1.0 Drop 91",
+  "description": "NITES-Next Operational Viewer for CANES",
+  "version": "1.0",
+  "productVersion": "1.0",
   "private": true,
-  "author": "SSC-PAC <support@spawar.navy.mil>",
-  "copyright": "2017, SPAWAR Systems Center, Pacific",
-  "homepage": "https://nites.sd.spawar.navy.mil/",
+  "homepage": "https://confluence.di2e.net/display/NNEXT/NITES-Next",
   "main": "src/background.js",
   "scripts": {
     "start": "electron .",
@@ -16,10 +14,11 @@
   },
   "dependencies": {
     "fs-jetpack": "^1.0.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "electron-in-page-search": "^1.3.2"
   },
   "devDependencies": {
-    "electron": "4.1.0",
+    "electron": "4.1.1",
     "electron-packager": "^12.2.0"
   }
 }
