--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "nites-viewer",
   "productName": "NITES-Next Viewer",
   "description": "NITES-Next Operational Viewer for CANES",
-  "version": "1.0.3",
-  "productVersion": "1.0.3",
+  "version": "1.0.4",
+  "productVersion": "1.0.4",
   "private": true,
   "homepage": "https://confluence.di2e.net/display/NNEXT/NITES-Next",
   "main": "src/background.js",
@@ -13,12 +13,12 @@
     "dist": "electron-packager ./ nitesviewer --platform=win32 --arch=x64 --overwrite --ignore=\\.vs --ignore=\\.vscode --ignore=obj --ignore=bin --ignore=NitesViewer.njsproj"
   },
   "dependencies": {
+    "electron-in-page-search": "^1.3.2",
     "fs-jetpack": "^1.0.0",
-    "path": "^0.12.7",
-    "electron-in-page-search": "^1.3.2"
+    "path": "^0.12.7"
   },
   "devDependencies": {
-    "electron": "4.2.9",
-    "electron-packager": "^13.1.1"
+    "electron": "4.2.11",
+    "electron-packager": "^14.0.6"
   }
 }
