--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "electron-in-page-search": "^1.3.2",
     "fs-jetpack": "^1.0.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "latinize": "^0.4.0"
   },
   "devDependencies": {
     "electron": "4.2.11",
